# github-gql

./: .gitignore  README.md  pyproject.toml  sandbox.py
.github/workflows/: on-release-created.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
githubgql/: Client.py  Clock.py  Config.py  Iterator.py  Merger.py  Paginator.py  PathKey.py  Query.py  Results.py  Schema.py  __init__.py  config.yml
